# CVAT

./: Dockerfile  pyproject.toml  requirements.txt
static/js/: main.js
templates/: index.html
