[tool.poetry]
name = "cvat"
version = "0.1.0"
description = ""
authors = ["choihamin <jason4284@korea.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.32.3"
label-studio = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
